...
        borderRadius: BorderRadius.circular(14),
        border: Border.all(color: AppColors.outline),
      ),
      child: Column(
        children: <Widget>[
          const Text(
            'Dica (PT)',
            style: TextStyle(
              color: AppColors.primary,
              fontWeight: FontWeight.w800,
            ),
          ),
          const SizedBox(height: 3),
...
            style: const TextStyle(height: 1.3),
          ),
          const SizedBox(height: 7),
          Container(width: 42, height: 1, color: AppColors.outline),
          const SizedBox(height: 7),
          const Text(
            'Hint (EN)',
            style: TextStyle(
              color: AppColors.secondary,
              fontWeight: FontWeight.w800,
            ),
          ),
          const SizedBox(height: 3),
...
